gccida/g0/emit_libcall_block
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3329:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3329:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3332:4: error: expected ';' after expression
rtx targeta; // [rsp+10h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3332:5: error: use of undeclared identifier 'targeta'; did you mean 'target'?
rtx targeta; // [rsp+10h] [rbp-70h] 
    ^~~~~~~
    target
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3325:42: note: 'target' declared here
void  emit_libcall_block( rtx insns, rtx target, rtx result, rtx equiv) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3333:4: error: expected ';' after expression
rtx insnsa; // [rsp+18h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3333:5: error: use of undeclared identifier 'insnsa'; did you mean 'insns'?
rtx insnsa; // [rsp+18h] [rbp-68h] 
    ^~~~~~
    insns
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3325:31: note: 'insns' declared here
void  emit_libcall_block( rtx insns, rtx target, rtx result, rtx equiv) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3336:4: error: expected ';' after expression
rtx set; // [rsp+28h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3336:5: error: use of undeclared identifier 'set'
rtx set; // [rsp+28h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3337:4: error: expected ';' after expression
rtx next; // [rsp+30h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3337:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+30h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3338:4: error: expected ';' after expression
rtx nexta; // [rsp+30h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3338:5: error: use of undeclared identifier 'nexta'
rtx nexta; // [rsp+30h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3339:4: error: expected ';' after expression
rtx last; // [rsp+38h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3339:5: error: use of undeclared identifier 'last'
rtx last; // [rsp+38h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3340:4: error: expected ';' after expression
rtx prev; // [rsp+40h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3340:5: error: use of undeclared identifier 'prev'
rtx prev; // [rsp+40h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3341:4: error: expected ';' after expression
rtx note_0; // [rsp+48h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3341:5: error: use of undeclared identifier 'note_0'; did you mean 'note_1'?
rtx note_0; // [rsp+48h] [rbp-38h] 
    ^~~~~~
    note_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3334:18: note: 'note_1' declared here
 struct rtx_def *note_1; // [rsp+20h] [rbp-60h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/optabs.c:3342:4: error: expected ';' after expression
rtx note; // [rsp+50h] [rbp-30h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_libcall_block/src/obj/optabs.o] Error 1
